src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre_Application</fullName>
                    <label>Pre-Application</label>
                </value>
                <value>
                    <fullName>Interconnection Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Battery_Size_Submitted_1__c</fullName>
        <label>Battery Size Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Battery_Size_Submitted__c</fullName>
        <label>Battery Size Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Battery_Type_Submitted_1__c</fullName>
        <label>Battery Type Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery_Type_Submitted__c</fullName>
        <label>Battery Type Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Report_Received_from_Utility__c</fullName>
        <label>Date Report Received from Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Report_Requested_from_Utility__c</fullName>
        <label>Date Report Requested from Utility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resubmitted__c</fullName>
        <label>Date Resubmitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Uitlity_Confirmed_Complete__c</fullName>
        <label>Date Uitlity Confirmed Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Utility_Acknowledged_Receipt_1__c</fullName>
        <label>Date Utility Acknowledged Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Utility_Acknowledged_Receipt__c</fullName>
        <label>Date Utility Acknowledged Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feeder_Number__c</fullName>
        <label>Feeder Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interconnection__c</fullName>
        <label>Interconnection</label>
        <referenceTo>Interconnection__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inverter_Size_Submitted_1__c</fullName>
        <label>Inverter Size Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Size_Submitted__c</fullName>
        <label>Inverter Size Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Type_Submitted_1__c</fullName>
        <label>Inverter Type Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Type_Submitted__c</fullName>
        <label>Inverter Type Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Plan_Submitted__c</fullName>
        <label>Site Plan Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substation_Voltage__c</fullName>
        <label>Substation Voltage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substation__c</fullName>
        <label>Substation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <nameField>
        <label>Application</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Interconnection_Application</fullName>
        <active>true</active>
        <label>Interconnection Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Application</fullName>
        <active>true</active>
        <label>Pre-Application</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>